--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -2,8 +2,6 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
-        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
-        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -26,7 +24,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SOD-hV-vIi">
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="SOD-hV-vIi">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="20"/>
                                 <color key="backgroundColor" red="0.0" green="0.58823529409999997" blue="0.53333333329999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
@@ -57,6 +55,10 @@
                             </navigationBar>
                             <view opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qkr-qy-mfN" customClass="FBLoginView">
                                 <rect key="frame" x="16" y="87" width="568" height="38"/>
+                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="38" id="pVU-vC-u7O"/>
+                                </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YYp-Lu-jru">
                                 <rect key="frame" x="16" y="166" width="568" height="167"/>
@@ -158,8 +160,8 @@
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="or" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WHS-j4-FwO">
-                                <rect key="frame" x="289" y="115" width="23" height="43"/>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-ThinItalic" family="Helvetica Neue" pointSize="28"/>
+                                <rect key="frame" x="291.5" y="127" width="18" height="31"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-ThinItalic" family="Helvetica Neue" pointSize="22"/>
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -167,23 +169,17 @@
                         <color key="backgroundColor" red="0.96078431372549022" green="0.96078431372549022" blue="0.96078431372549022" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <gestureRecognizers/>
                         <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="ONk-Ab-8F6" secondAttribute="trailing" constant="-16" id="09m-SQ-3DM"/>
                             <constraint firstItem="qkr-qy-mfN" firstAttribute="trailing" secondItem="YYp-Lu-jru" secondAttribute="trailing" id="1fE-b4-f27"/>
-                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="centerX" secondItem="YYp-Lu-jru" secondAttribute="centerX" id="4t7-Re-g7E"/>
-                            <constraint firstItem="qkr-qy-mfN" firstAttribute="top" secondItem="ONk-Ab-8F6" secondAttribute="bottom" constant="23" id="9Er-Oz-nnK"/>
-                            <constraint firstItem="YYp-Lu-jru" firstAttribute="top" secondItem="WHS-j4-FwO" secondAttribute="bottom" constant="8" id="DRP-a4-VqK"/>
-                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="top" secondItem="SOD-hV-vIi" secondAttribute="bottom" id="Fa9-VS-9EK"/>
-                            <constraint firstItem="SOD-hV-vIi" firstAttribute="top" secondItem="M0v-4D-W7E" secondAttribute="top" id="Gka-l9-AVu"/>
-                            <constraint firstItem="SOD-hV-vIi" firstAttribute="leading" secondItem="M0v-4D-W7E" secondAttribute="leading" id="H7t-M1-sl7"/>
-                            <constraint firstItem="WHS-j4-FwO" firstAttribute="top" secondItem="qkr-qy-mfN" secondAttribute="bottom" constant="-10" id="JGD-Bg-juj"/>
+                            <constraint firstItem="YYp-Lu-jru" firstAttribute="top" secondItem="qkr-qy-mfN" secondAttribute="bottom" constant="41" id="8IB-xS-8I1"/>
+                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="top" secondItem="lJ6-kK-nHk" secondAttribute="bottom" id="CDv-ox-imY"/>
+                            <constraint firstItem="qkr-qy-mfN" firstAttribute="top" secondItem="lJ6-kK-nHk" secondAttribute="bottom" constant="67" id="Jay-Jx-zva"/>
+                            <constraint firstItem="YYp-Lu-jru" firstAttribute="top" secondItem="WHS-j4-FwO" secondAttribute="bottom" constant="8" id="Lnj-bO-MRe"/>
                             <constraint firstAttribute="centerX" secondItem="YYp-Lu-jru" secondAttribute="centerX" id="NX1-HV-e0t"/>
-                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="top" secondItem="lJ6-kK-nHk" secondAttribute="bottom" id="Q37-79-faM"/>
+                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="leading" secondItem="M0v-4D-W7E" secondAttribute="leadingMargin" constant="-16" id="QxH-4E-Idc"/>
                             <constraint firstItem="qkr-qy-mfN" firstAttribute="leading" secondItem="M0v-4D-W7E" secondAttribute="leadingMargin" id="Uil-GO-1Q3"/>
-                            <constraint firstItem="WHS-j4-FwO" firstAttribute="top" secondItem="M0v-4D-W7E" secondAttribute="top" constant="115" id="WWs-0L-bUC"/>
-                            <constraint firstAttribute="centerY" secondItem="YYp-Lu-jru" secondAttribute="centerY" constant="50.5" id="Wme-T6-z4a"/>
+                            <constraint firstItem="WHS-j4-FwO" firstAttribute="top" secondItem="qkr-qy-mfN" secondAttribute="bottom" constant="2" id="gII-38-PQ0"/>
                             <constraint firstItem="WHS-j4-FwO" firstAttribute="centerX" secondItem="qkr-qy-mfN" secondAttribute="centerX" id="hLo-so-cah"/>
-                            <constraint firstItem="ONk-Ab-8F6" firstAttribute="leading" secondItem="SOD-hV-vIi" secondAttribute="leading" id="lM9-1l-Uf1"/>
-                            <constraint firstAttribute="trailing" secondItem="SOD-hV-vIi" secondAttribute="trailing" id="uCC-2B-Y6i"/>
-                            <constraint firstItem="SOD-hV-vIi" firstAttribute="centerX" secondItem="YYp-Lu-jru" secondAttribute="centerX" id="wyH-m6-qnb"/>
                             <constraint firstItem="qkr-qy-mfN" firstAttribute="leading" secondItem="YYp-Lu-jru" secondAttribute="leading" id="yVc-cd-IHr"/>
                         </constraints>
                     </view>
@@ -299,26 +295,18 @@
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <dataDetectorType key="dataDetectorTypes"/>
                             </webView>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCD-i4-wqh">
-                                <rect key="frame" x="396" y="501" width="188" height="79"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIXIe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2k-LN-2YF">
+                                <rect key="frame" x="183" y="91" width="235" height="73"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="188" id="3ad-Zs-nih"/>
+                                    <constraint firstAttribute="width" constant="235" id="H6C-Pr-yTO"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="21"/>
-                                <state key="normal" title="Register">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <segue destination="qeE-zF-yis" kind="presentation" identifier="presentRegister" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="oym-lx-Ugs"/>
-                                </connections>
-                            </button>
+                                <fontDescription key="fontDescription" name="Syncopate-Regular" family="Syncopate" pointSize="75"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WYI-0U-HP2">
-                                <rect key="frame" x="16" y="501" width="188" height="79"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="79" id="3Ty-n9-tkf"/>
-                                    <constraint firstAttribute="width" constant="188" id="bFQ-gP-Kd5"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="21"/>
+                                <rect key="frame" x="28" y="538" width="71" height="42"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="25"/>
                                 <state key="normal" title="Sign In">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
@@ -326,30 +314,29 @@
                                     <segue destination="8uD-2E-CAb" kind="presentation" identifier="presentSignIn" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="7xh-dc-ChV"/>
                                 </connections>
                             </button>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="PIXIe" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="B2k-LN-2YF">
-                                <rect key="frame" x="183" y="91" width="235" height="73"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="235" id="NQD-Nr-6d9"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="Syncopate-Regular" family="Syncopate" pointSize="75"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vCD-i4-wqh">
+                                <rect key="frame" x="487" y="538" width="85" height="42"/>
+                                <fontDescription key="fontDescription" name="HelveticaNeue-Thin" family="Helvetica Neue" pointSize="25"/>
+                                <state key="normal" title="Register">
+                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <segue destination="qeE-zF-yis" kind="presentation" identifier="presentRegister" modalPresentationStyle="overFullScreen" modalTransitionStyle="crossDissolve" id="oym-lx-Ugs"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstItem="WYI-0U-HP2" firstAttribute="leading" secondItem="Kul-P5-94b" secondAttribute="leadingMargin" id="8NK-AJ-e5K"/>
-                            <constraint firstItem="bz9-2j-ihA" firstAttribute="leading" secondItem="Kul-P5-94b" secondAttribute="leading" id="AcM-es-usP"/>
-                            <constraint firstItem="vCD-i4-wqh" firstAttribute="trailing" secondItem="Kul-P5-94b" secondAttribute="trailingMargin" id="IAB-O3-z6o"/>
-                            <constraint firstItem="vCD-i4-wqh" firstAttribute="top" secondItem="WYI-0U-HP2" secondAttribute="top" id="MOS-C6-D6H"/>
-                            <constraint firstAttribute="bottom" secondItem="WYI-0U-HP2" secondAttribute="bottom" constant="20" symbolic="YES" id="PG6-Z1-GNW"/>
-                            <constraint firstItem="vCD-i4-wqh" firstAttribute="baseline" secondItem="WYI-0U-HP2" secondAttribute="firstBaseline" id="Ygq-2h-yaO"/>
-                            <constraint firstItem="bz9-2j-ihA" firstAttribute="centerX" secondItem="B2k-LN-2YF" secondAttribute="centerX" id="atI-Ft-dwT"/>
-                            <constraint firstItem="B2k-LN-2YF" firstAttribute="top" secondItem="DP7-dI-ri3" secondAttribute="bottom" constant="71" id="b9m-Bt-Qne"/>
-                            <constraint firstItem="bz9-2j-ihA" firstAttribute="top" secondItem="Kul-P5-94b" secondAttribute="top" id="rxb-my-k5E"/>
-                            <constraint firstItem="bz9-2j-ihA" firstAttribute="bottom" secondItem="Qnt-Ff-L22" secondAttribute="top" id="sSf-Ax-S5P"/>
-                            <constraint firstItem="WYI-0U-HP2" firstAttribute="baseline" secondItem="vCD-i4-wqh" secondAttribute="firstBaseline" id="u0v-FM-oky"/>
-                            <constraint firstAttribute="trailing" secondItem="bz9-2j-ihA" secondAttribute="trailing" id="y26-Oz-YIt"/>
+                            <constraint firstItem="bz9-2j-ihA" firstAttribute="top" secondItem="Kul-P5-94b" secondAttribute="top" id="6zB-5s-IBK"/>
+                            <constraint firstAttribute="bottom" secondItem="WYI-0U-HP2" secondAttribute="bottom" constant="20" symbolic="YES" id="8fx-qf-gRd"/>
+                            <constraint firstAttribute="trailing" secondItem="bz9-2j-ihA" secondAttribute="trailing" id="Hb8-G7-Ryu"/>
+                            <constraint firstItem="B2k-LN-2YF" firstAttribute="top" secondItem="DP7-dI-ri3" secondAttribute="bottom" constant="71" id="Rfi-1D-Vd4"/>
+                            <constraint firstItem="WYI-0U-HP2" firstAttribute="baseline" secondItem="vCD-i4-wqh" secondAttribute="baseline" id="W6P-k8-Vic"/>
+                            <constraint firstItem="bz9-2j-ihA" firstAttribute="bottom" secondItem="Qnt-Ff-L22" secondAttribute="top" id="W8R-2C-oqN"/>
+                            <constraint firstItem="WYI-0U-HP2" firstAttribute="leading" secondItem="Kul-P5-94b" secondAttribute="leadingMargin" constant="12" id="eGd-IP-ryZ"/>
+                            <constraint firstItem="B2k-LN-2YF" firstAttribute="centerX" secondItem="bz9-2j-ihA" secondAttribute="centerX" id="fba-ja-P6f"/>
+                            <constraint firstItem="bz9-2j-ihA" firstAttribute="leading" secondItem="Kul-P5-94b" secondAttribute="leading" id="luf-vf-pZF"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="vCD-i4-wqh" secondAttribute="trailing" constant="12" id="uSb-r7-j5w"/>
                         </constraints>
                     </view>
                     <connections>
