Added matches shit
- added matches view that also links to user bio and reviews
- connected to main storyboard
- icons are shit but just needed to put something there for sizing and
placement purposes

--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -277,11 +277,80 @@
                         <outlet property="toolBar" destination="dyh-NB-3wh" id="WVC-Rd-oUd"/>
                         <outlet property="webViewBG" destination="1dC-Jr-vGL" id="a1F-up-ji6"/>
                         <segue destination="oOl-XQ-AIu" kind="custom" identifier="postRideSegue" id="w4w-Vg-J1K"/>
+                        <segue destination="2PL-Nj-2SE" kind="custom" identifier="showMatches" id="Gap-73-MpG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="814" y="-259"/>
+        </scene>
+        <!--Matches View Controller-->
+        <scene sceneID="NPY-cc-Iaf">
+            <objects>
+                <viewController id="2PL-Nj-2SE" customClass="MatchesViewController" customModule="Pixie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="nUD-WG-etE"/>
+                        <viewControllerLayoutGuide type="bottom" id="HU4-jy-jzf"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="jjn-2n-Yqw">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="lG3-sQ-OM6" kind="custom" identifier="showUserBio" id="Vnq-Mo-Toq"/>
+                        <segue destination="1al-ph-uIg" kind="unwind" identifier="unwindToSearchView" unwindAction="unwindToSearchView:" id="koV-I8-kk0"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ak2-py-XIn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="1al-ph-uIg" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="814" y="672"/>
+        </scene>
+        <!--Bio View Controller-->
+        <scene sceneID="jKj-IE-WZz">
+            <objects>
+                <viewController id="lG3-sQ-OM6" customClass="BioViewController" customModule="Pixie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="T3h-dV-Aed"/>
+                        <viewControllerLayoutGuide type="bottom" id="TBe-vJ-zTR"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="IXH-Wv-Lfh">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="Ajk-ED-Suc" kind="unwind" identifier="unwindToMatches" unwindAction="unwindToMatches:" id="jex-CB-vFi"/>
+                        <segue destination="NDX-7d-cT5" kind="custom" identifier="showReviews" id="06s-tO-BJp"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rq8-id-0do" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Ajk-ED-Suc" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1682" y="672"/>
+        </scene>
+        <!--Reviews View Controller-->
+        <scene sceneID="rFq-5J-jvS">
+            <objects>
+                <viewController id="NDX-7d-cT5" customClass="ReviewsViewController" customModule="Pixie" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yAt-7y-k6H"/>
+                        <viewControllerLayoutGuide type="bottom" id="9gm-Js-HBw"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="FdK-kr-4ME">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <connections>
+                        <segue destination="h9m-WW-qkX" kind="unwind" identifier="unwindToBio" unwindAction="unwindToBio:" id="TSv-1b-IGk"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="XYZ-Kf-FQM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="h9m-WW-qkX" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="2469" y="672"/>
         </scene>
         <!--Post Ride View Controller-->
         <scene sceneID="T8e-yu-47L">
@@ -303,7 +372,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="bRJ-3K-3R2" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="keP-pR-kfn" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="814" y="509"/>
+            <point key="canvasLocation" x="1526" y="-1235"/>
         </scene>
         <!--InitialViewController-->
         <scene sceneID="ZLf-Wz-QDR">
