--- a/mike's stuff/Pixie/Base.lproj/Main.storyboard
+++ b/mike's stuff/Pixie/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="vXZ-lx-hvc">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="WGR-7L-PRe">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
@@ -677,6 +677,7 @@
                                             <outlet property="countLabel" destination="Gaw-wr-L9E" id="rGn-Os-jP0"/>
                                             <outlet property="iconImageView" destination="SOJ-El-qIN" id="YUn-rA-4cF"/>
                                             <outlet property="titleLabel" destination="c6r-l3-3Vf" id="eZL-VP-EdU"/>
+                                            <segue destination="Fie-Z7-IVb" kind="show" identifier="presentProfile" id="jF7-NW-A5o"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -709,7 +710,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gBX-1g-wYc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1638" y="-259"/>
+            <point key="canvasLocation" x="1590" y="-259"/>
+        </scene>
+        <!--ProfileViewController-->
+        <scene sceneID="ABM-nP-28l">
+            <objects>
+                <viewController title="ProfileViewController" id="Fie-Z7-IVb" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="gJE-85-EEO"/>
+                        <viewControllerLayoutGuide type="bottom" id="BQ7-51-cme"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="HWq-Z8-WzN">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bXF-kI-0xh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2275" y="-259"/>
         </scene>
     </scenes>
     <resources>
